--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -1,15 +1,38 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+dist/
+build/
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+# Node modules
+node_modules/
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# Angular specific files
+.angular/
+.angular-cache/
+.angular-build/
 
 # IDEs and editors
 .idea/
@@ -19,24 +42,11 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.vscode/
+.history/
+*.code-workspace
 
-# Visual Studio Code
+# IDE - VSCode
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
+!.vscode/tas
